@@ -105,12 +105,12 @@
   ConstrainWindowSize = NO;
   ClipRaiseLowerKey = None;
   TitleJustify = center;
-  WindowTitleFont = "Trebuchet MS,Luxi Sans:bold:pixelsize=11";
-  MenuTitleFont = "Trebuchet MS,Luxi Sans:bold:pixelsize=11";
-  MenuTextFont = "Trebuchet MS,Luxi Sans:pixelsize=11";
-  IconTitleFont = "Arial,Luxi Sans:pixelsize=8";
+  WindowTitleFont = "Trebuchet MS,Luxi Sans:bold:pixelsize=12";
+  MenuTitleFont = "Trebuchet MS,Luxi Sans:bold:pixelsize=12";
+  MenuTextFont = "Trebuchet MS,Luxi Sans:pixelsize=12";
+  IconTitleFont = "Arial,Luxi Sans:pixelsize=9";
   ClipTitleFont = "Verdana:bold:pixelsize=10";
-  DisplayFont = "Trebuchet MS,Luxi Sans:pixelsize=11";
+  DisplayFont = "Trebuchet MS,Luxi Sans:pixelsize=12";
   LargeDisplayFont = "Trebuchet MS,Luxi Sans:pixelsize=24";
   HighlightColor = white;
   HighlightTextColor = black;
